--- a/Changes
+++ b/Changes
@@ -2,6 +2,9 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+        - Update to work with JMAP::Tester 0.100
+        - Fixes to work with cyrus changes
+
 0.001     2018-12-04 12:16:20-05:00 America/New_York
  
         - First release
